v0.3.4 - Mobile Nav & Section Heading Fixes
Fixed a transition when using the section nav (arrows) to change the section. Previously, it would fade-in and out the icons resulting in some visual mess and icon "jumping".

Fixed the section heading gradient. It was stretched to fit the 100% width of the section. The actual text had only the middle part of the gradient.
After the fix the gradient looks correct.

--- a/int_resources/css/main.css
+++ b/int_resources/css/main.css
@@ -859,6 +859,11 @@ nav{
         transition:0.25s;
     }
 
+    .nav-elem.nav-not-opened,
+    .nav-inner:has(.nav-not-opened) .nav-close{
+        transition:0s;
+    }
+
     .nav-elem:nth-of-type(1),
     .nav-elem:nth-last-child(3){
         margin:0;
@@ -892,6 +897,16 @@ nav{
         transition:0.25s;
     }
 
+    .nav-not-opened .nav-icon{
+        transition:0s;
+    }
+
+    .nav-not-opened .nav-icon svg *,
+    .nav-not-opened.nav-elem.curr-section .nav-icon svg *{
+        transition:0s;
+        transition-delay:0s;
+    }
+    
     .curr-section .nav-icon{
         bottom:0;
     }
